testdata/baselines/reference/compiler/quantifiedTypesBoundedTypeParameters.errors.txt
quantifiedTypesBoundedTypeParameters.ts(6,6): error TS2345: Argument of type 'T' is not assignable to parameter of type 'T'.
  Both type parameters are bounded to different variables
    'T' could be instantiated with an arbitrary type which could be unrelated to 'T'.


==== quantifiedTypesBoundedTypeParameters.ts (1 errors) ====
    type F = <T> { v: T, f: (v: T) => void };
    declare let f1: F
    declare let f2: F
    
    f1.f(f1.v)
    f1.f(f2.v)
         ~~~~
!!! error TS2345: Argument of type 'T' is not assignable to parameter of type 'T'.
!!! error TS2345:   Both type parameters are bounded to different variables
!!! error TS2345:     'T' could be instantiated with an arbitrary type which could be unrelated to 'T'.
!!! related TS5114 quantifiedTypesBoundedTypeParameters.ts:3:13: Type parameter 'T' is bounded to this variable
!!! related TS5114 quantifiedTypesBoundedTypeParameters.ts:2:13: Type parameter 'T' is bounded to this variable
    